[tool.poetry]
name = "samapi"
version = "0.6.1"
description = "Segment Anything Model (SAM) API"
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "samapi", from = "src"}, {include = "sam2_configs", from = "src"}]

[[tool.poetry.source]]
name = "pytorch_nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["all"], version = "^0.96.0"}
geojson = "*"
numpy = ">=2.2,<3.0"
scikit-image = ">=0.24.0"
shapely = "*"
opencv-python = "^4.11.0"
timm = "^0.9.2"
gdown = "^5.1.0"
pillow = "*"
torch = { version = "2.8.0.dev20250527", source = "pytorch_nightly" }
torchvision = { version = "0.22.0.dev20250527", source = "pytorch_nightly" }
torchaudio = { version = "2.6.0.dev20250527", source = "pytorch_nightly" }
pytorch-triton = { version = "3.3.1+gitc8757738", source = "pytorch_nightly" }
mobile_sam = { git = "https://github.com/NikolasSchmitz/MobileSAM.git" }
"sam-2" = { git = "https://github.com/NikolasSchmitz/sam2.git" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.14.0"
